# InertiaGamesGenerator

./: CMakeLists.txt  Main.qml  README.md  games-data-path.cpp  games-data-path.hpp  main.cpp
